--- a/style.css
+++ b/style.css
@@ -16,6 +16,6 @@
     font-family: 'Bangers',cursive;
 }
 
-#layer1,#layer2,#layer3,#layer4,#player,#angler1,#angler2,#lucky,#proyectile,#gears,#hivewhale,#drone{
+#layer1,#layer2,#layer3,#layer4,#player,#angler1,#angler2,#lucky,#proyectile,#gears,#hivewhale,#drone,#fireExplosion,#smokeExplosion{
     display: none;
 }
